Fixed Collapse Issue and Display Task Styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,4 +77,22 @@
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
     }
+
+    .my-inner-shadow-red {
+        -webkit-box-shadow: inset 0px 5px 4px 0px rgba(199, 98, 98, 0.65);
+        -moz-box-shadow: inset 0px 5px 4px 0px rgba(199, 98, 98, 0.65);
+        box-shadow: inset 0px 5px 4px 0px rgba(199, 98, 98, 0.65);
+    }
+
+    .my-inner-shadow-orange {
+        -webkit-box-shadow: inset 0px 5px 4px 0px rgba(230, 133, 69, 0.65);
+        -moz-box-shadow: inset 0px 5px 4px 0px rgba(230, 133, 69, 0.65);
+        box-shadow: inset 0px 5px 4px 0px rgba(230, 133, 69, 0.65);
+    }
+
+    .my-inner-shadow-blue {
+        -webkit-box-shadow: inset 0px 5px 4px 0px rgba(81, 170, 176, 0.65);
+        -moz-box-shadow: inset 0px 5px 4px 0px rgba(81, 170, 176, 0.65);
+        box-shadow: inset 0px 5px 4px 0px rgba(81, 170, 176, 0.65);
+    }
 }
